--- a/style.css
+++ b/style.css
@@ -37,6 +37,23 @@ input[type='text2']
 	width:80px;
 }
 
+input[type='weaponNameText']
+{
+	font-family: 'Abel', serif;
+	font-size: 18px;
+	color: #33F7DB;
+
+	background: transparent;
+	border: none;
+	outline: none;
+	
+	position: relative;
+	top: 1px;
+	left: 2px;
+	
+	width:80px;
+}
+
 input[type='tableInput']
 {
 	font-family: 'Abel', serif;
