--- a/style.css
+++ b/style.css
@@ -67,7 +67,23 @@ input[type='tableInput']
 	position: relative;
 	left: 7px;
 	
+	float: left;
+	
 	width: 120px;
+}
+
+input[type='tableInputHalf']
+{
+	font-family: 'Abel', serif;
+	font-size: 18px;
+	color: #33F7DB;
+
+	background: transparent;
+	border: none;
+	outline: none;
+	
+	position: relative;
+	left: 7px;
 }
 
 button
@@ -102,7 +118,9 @@ select[type='select2']
 	font-size: 16px;
 	color: #33F7DB;
 	
-	width: 120px;
+	width: 170px;
+	
+	float: left;
 
 	background: transparent;
 	border: none;
@@ -123,11 +141,6 @@ option
 	background-image: none;
 }
 
-span 
-{
-	display: inline-block;
-	width: 100px;
-}
 
 table[type='weaponTable']
 {
@@ -146,6 +159,18 @@ td
 	border: 1px solid grey;
 }
 
+td[type='lower']
+{
+	border: 1px solid grey;
+	width: 110px;	
+}
+
+td[type='left']
+{
+	border: 1px solid grey;
+	text-align: left;
+}
+
 div[type='weaponBlock']
 { 
 	border: 1px solid grey;
@@ -158,6 +183,20 @@ div[type='statColumn']
 { 
 	border: 1px solid grey;
 	width: 220px;
+}
+
+input[type='checkbox']
+{
+  width: 10px;
+  height: 10px;
+  padding: 0;
+  margin:0;
+  vertical-align: bottom;
+  position: relative;
+  top: -3px;
+  *overflow: hidden;
+  
+  font-size: 4px;
 }
 
 div[type='rerollsBlock']
