--- a/style.css
+++ b/style.css
@@ -1,12 +1,47 @@
 body
 {
 	font-family: 'Abel', serif;
+	font-size: 12px;
+}
+
+a
+{
+	font-family: 'Abel', serif;
+	font-size: 14px;
+	color: #33F7DB;
+
+	background: transparent;
+	border: none;
+	outline: none;
+	
+	position: relative;
+	top: 1px;
+	left: 2px;
+	
+	width:50px;
+}
+
+input[type='weaponNameText']
+{
+	font-family: 'Abel', serif;
+	font-size: 18px;
+	color: #33F7DB;
+	
+	background: transparent;
+	border: none;
+	outline: none;
+	
+	position: relative;
+	top: 1px;
+	left: 2px;
+	
+	width:80px;
 }
 
 input[type='tableInput']
 {
 	font-family: 'Abel', serif;
-	font-size: 18px;
+	font-size: 12px;
 	color: #33F7DB;
 
 	background: transparent;
@@ -24,7 +59,7 @@ input[type='tableInput']
 input[type='tableInputHalf']
 {
 	font-family: 'Abel', serif;
-	font-size: 18px;
+	font-size: 12px;
 	color: #33F7DB;
 
 	background: transparent;
@@ -64,7 +99,7 @@ select
 select[type='select2']
 {
 	font-family: 'Abel', serif;
-	font-size: 16px;
+	font-size: 12px;
 	color: #33F7DB;
 	
 	width: 170px;
